# nCPU

./: .gitignore  README.md  main.py  neural_cpu.py  neural_cpu_tensor_integrated.py  neural_cpu_tensor_native.py  requirements.txt  snake_neural.py  snake_neural_cpu.py
kernels/rust_metal/: 100PCT_NEURAL_DISPATCH.md  Cargo.toml  EMBEDDING_DISPATCH_INTEGRATED.md  NEURAL_IMPLEMENTATION_STATUS.md  PHASE_8A_NEURAL_INTEGRATION_COMPLETE.md  PURE_GPU_EXECUTION_ACHIEVED.md  PURE_NEURAL_DISPATCH_ACHIEVED.md  analyze_doom_instructions.py  benchmark_all_modes.py  benchmark_optimizations.py  benchmark_ultra.py  debug_loop_detection.py  embedding_neural_dispatch.py  extract_neural_weights.py  load_neural_weights.py  pure_neural_dispatch_demo.py  pyproject.toml  test_add_reg.py  test_arm64_basic.py  test_async_gpu.py  test_debug_simple.py  test_debug_weights.py  test_doom_simple.py  test_embedding_dispatch.py  test_ldr_str_debug.py  test_loop_acceleration.py  test_neural_weights_loaded.py  test_neural_with_weights.py  test_pure_gpu.py  test_pure_gpu_simple.py  test_pure_gpu_verify.py  test_pure_neural_dispatch.py  test_trained_dispatch.py  test_verify_movz.py  train_dispatch_final.py  train_dispatch_network.py  train_dispatch_v2.py  train_dispatch_v3.py
kernels/rust_metal/src/: async_gpu.rs  bb_cache.rs  bb_cache_runtime.rs  boot_image.rs  continuous.rs  diff_jit.rs  differentiable_ooo.rs  elf_loader.rs  full_arm64.rs  fusion.rs  gpu_optimizer.rs  jit_compiler.rs  launcher.rs  lib.rs  micro_op.rs  microkernel.rs  multi_kernel.rs  native_abi.rs  neural_dispatch.rs  neural_hybrid.rs  (+16 more)
(+861 files in other folders)
